apps/kube/mc/manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: mc
    labels:
        name: mc
        pod-security.kubernetes.io/enforce: privileged
