apps/kube/mc/manifest/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: mc-route
    namespace: mc
spec:
    parentRefs:
        - name: kbve-gateway
          namespace: kbve
    hostnames:
        - mc.kbve.com
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: mc-service
                port: 8080
